# AISD_LABS

./: desktop.ini
Lab1/: CMakeLists.txt  tests.cc  vector.cc  vector.h
Lab2/: CMakeLists.txt  linked_list.cc  tests.cc
Lab3/: CMakeLists.txt
Lab3/include/: naturalMergeSort.h  quickSort.h  selectionSort.h  sorting_functions.h  stats.h  task_functions.h
Lab3/src/: sorting.cc  task.cc
Lab3/statistic/: Grafics.xlsx
